<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
    android:paddingRight="?android:attr/listPreferredItemPaddingRight" >

    <!-- Priamry (Title) and Secondary (Artist) text labels -->

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/playable_text_primary"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/test_text_song_title" />

        <TextView
            android:id="@+id/playable_text_secondary"
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/test_text_song_artist" />
    </LinearLayout>

    <!-- Song Icon / Album Art -->

    <com.schneenet.android.upnext.views.ListIconImageView
        android:id="@+id/playable_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:src="@drawable/spinner_dropdown"
        android:background="@drawable/test_album_art" />

</LinearLayout>