<?xml version="1.0" encoding="utf-8"?>
<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sticky_scrollview"
    style="@style/AppTheme.Player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/playlist_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical">

        <!-- TODO Timer -->
        <!-- This will have tag 'sticky-nonconstant' -->

        <!-- TODO Shuffle / Repeat Controls -->
        <!-- This will have tag 'sticky-nonconstant' -->

        <!--
        <LinearLayout
            android:id="@+id/misc_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:tag="sticky-nonconstant" >

            <ImageButton
                android:id="@+id/button_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/button_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                
        -->
        <RelativeLayout
            android:id="@+id/main_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="sticky-hastransparency">
            
            <!-- ViewPager -->
            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/track_pager" />
            <ProgressBar
                android:id="@+id/main_control_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:max="360"
                android:progress="124"
                android:secondaryProgress="254" />
            <LinearLayout
                android:id="@+id/main_control_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="right"
                android:background="@color/backgroundSecondaryDark"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/main_control_icon_status"
                    android:layout_width="14sp"
                    android:layout_height="14sp"
                    android:contentDescription="@string/cd_status"
                    android:src="@android:drawable/ic_media_play" />
                <TextView
                    android:id="@+id/main_control_label_time"
                    style="@style/Text.Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text_song_time" />
                <TextView
                    android:id="@+id/main_control_label_time_delim"
                    style="@style/Text.Time.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_delim" />
                <TextView
                    android:id="@+id/main_control_label_time_of"
                    style="@style/Text.Time.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text_song_time_of" />
            </LinearLayout>
        </RelativeLayout>
        
    	<!-- Playlist -->
    	<!-- TODO Static header -->
    	<!-- Items Added Dynamically -->
        <LinearLayout
            android:id="@+id/playlist_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>